# Skin-Cancer-Detection

./: .gitignore  AGENTS.md  SKILLS_GUIDE.md  benchmark_3_dataset.md  conftest.py  environment.yml  isic-2018-seg.ipynb  pyproject.toml  requirements.txt  setup.py  walkthrough.md.resolved
.cursor/rules/: skin-cancer-cv.mdc
configs/: base.yaml
scripts/: evaluate.py  merge_and_split_isic.py  predict.py  prepare_data.py  train.py
src/: __init__.py
stage-1-segmentation/: Model architecture and attention mechanism.md  code_of_notebook_training_resnet34_unet.py  fine_tune_512x512.py  isic-2018-seg.ipynb  isic-2018-segmentation.ipynb  isic-2018-segmentation.py  model-architecture-segmentation.md  model-architecture.md  source_code_segmentation.py  split_dataset.py  training_history.txt  verify_dataset.py  visualize_training.py
stage-2-classification/: DenseNet121-ISIC-2019.ipynb  Densenet121-CBAM-ISIC-2019.ipynb  EDA.ipynb  EfficientNet-B0-ISIC-2019.ipynb  EfficientNet-B0-ISIC-2019.py  ISIC_2019_5folds_metadata.csv  Resnet50-ISIC-2019.ipynb  convnext_tiny_ISIC_2019.py  create_metada_testset.ipynb  create_metadata.ipynb  generate_dataset.py  isic-2019 (1).ipynb  isic-2019.ipynb  plan-implementation-ConvNeXt-tiny.md  plan-implementation-EfficientNet-B2.md  plan-implementation-EfficientNet‑B0.md  plan-implementation-ResNet50-CBAM.md  version1.py.py
tests/: test_config.py  test_dataset.py  test_distributed_context.py  test_evaluate_streaming.py  test_logger.py  test_losses.py  test_metrics.py  test_script_optimizations.py  test_trainer_robustness.py  test_transforms.py
(+93 files in other folders)
